<resources>
    <string name="app_name">X Wing 2.5 Score Tracker</string>
    <string name="x_wing_2_5_timer_and_score_tracker">X-Wing 2.5 Timer &amp; Score Tracker</string>
    <string name="time">Timer :</string>
    <string name="start">Start</string>
    <string name="time_left">Time Left :</string>
    <string name="less">-</string>
    <string name="plus">+</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="startBtn">START</string>
    <string name="_0">0</string>
    <string name="minutes">Minutes</string>
    <string name="Historical">Historical</string>
    <string name="delete">Delete</string>
    <string name="mission_rules">Mission Rules</string>
    <string name="lessless">--</string>
    <string name="plusplus">++</string>
    <string name="plusplus2">+2</string>
    <string name="plus1">+</string>
    <string name="less1">-</string>
    <string name="lessless2">-2</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="name">Name :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="end_the_game">End the game ?</string>
    <string name="delete_game">delete game</string>
    <string name="missiondeuxpoint">Mission :</string>
    <string name="date_end">Date End :</string>
    <string name="final_round">Final Round :</string>
    <string name="events">Events :</string>
    <string name="random_timer">Random Timer</string>
    <string name="hide_timer">Hide Timer</string>
    <string name="hide_time_left">Hide Time Left</string>
    <string name="get_random_mission">Get Random Mission</string>
    <string name="opponent">Opponent :</string>
    <string name="mission">Mission</string>
    <string name="no_mission">No Mission</string>
    <string name="round">Round :</string>
    <string name="global">GLOBAL</string>
    <string name="kill">KILL</string>
    <string name="language">Language :</string>
    <string name="stop">Stop</string>
    <string name="random_timer_setting">Random :</string>
    <string name="time_volatility">Graduation :</string>
    <string name="first_player">First Player</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="set_alarme">Set Alarm</string>
    <string name="list">List</string>
    <string name="dicelibelle">Dices</string>
    <string name="attackdice">Red</string>
    <string name="defensedice">Green</string>
    <string name="blank">Blank</string>
    <string name="eye">Eye</string>
    <string name="hit">Hit</string>
    <string name="crit">Crit</string>
    <string name="evade">Evade</string>
    <string name="assault">Assault</string>
    <string name="chance">Chance</string>
    <string name="salvage">Salvage</string>
    <string name="scramble">Scramble</string>
    <string name="_75" translatable="false">75</string>
</resources>