<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrondColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/primaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/x_wing_2_5_timer_and_score_tracker"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/subsubtitle_text_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayoutTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/primaryTitle">

                <TextView
                    android:id="@+id/timerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/time"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/subsubtitle_text_size" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:hintEnabled="true"
                    app:layout_constraintLeft_toRightOf="@+id/timerTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputTimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_light"
                        android:gravity="center_vertical"
                        android:hint="@string/minutes"
                        android:inputType="number"
                        android:text="@string/_75"
                        android:textColor="@color/textColor"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBtnStart"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutTimer">

                <Button
                    android:id="@+id/btnRandom"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/random_timer"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/btnStart"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="@string/start"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRandomTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBtnStart">


                <CheckBox
                    android:id="@+id/checkHideTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/green"
                    android:fontFamily="@font/open_sans_light"
                    android:gravity="center"
                    android:text="@string/hide_timer"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"

                    android:textSize="@dimen/normal_text"
                    tools:ignore="RtlCompat" />


                <CheckBox
                    android:id="@+id/checkHideTimeLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:buttonTint="@color/green"
                    android:fontFamily="@font/open_sans_light"
                    android:gravity="center"
                    android:text="@string/hide_time_left"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"

                    android:textSize="@dimen/normal_text"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/missionLane1"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBtnStart">

                <Button
                    android:id="@+id/btnAssault"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:backgroundTint="@color/green"
                    android:text="@string/assault"
                    android:textColor="@color/textColor"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearRandomTime" />

                <Button
                    android:id="@+id/btnChance"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="@string/chance"
                    android:textColor="@color/textColor"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearRandomTime" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/missionLane2"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missionLane1">

                <Button
                    android:id="@+id/btnSalvage"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:backgroundTint="@color/green"
                    android:text="@string/salvage"
                    android:textColor="@color/textColor"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearRandomTime" />

                <Button
                    android:id="@+id/btnScramble"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="@string/scramble"
                    android:textColor="@color/textColor"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearRandomTime" />

            </LinearLayout>
            <Button
                android:id="@+id/btnKnowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/green"
                android:text="Ancient Knowledge"
                android:textColor="@color/textColor"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missionLane2" />
            <Button
                android:id="@+id/btnRandomMission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/green"
                android:text="@string/get_random_mission"
                android:textColor="@color/textColor"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnKnowledge" />

            <TextView
                android:id="@+id/textViewRandomMission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRandomMission" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/grey"
        android:text="@string/settings"
        android:textColor="@color/backgrondColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <Button
        android:id="@+id/btnHistorique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/grey"
        android:text="@string/Historical"
        android:textColor="@color/backgrondColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>