<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogHelp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/backgrondColor"
    android:layout_gravity="center"
    android:padding="20dp">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/end_the_game"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/subsubtitle_text_size" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnYesEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/yes"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/btnNoEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/no"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
