<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/headerTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/timeLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/time_left"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/normal_text" />


                <TextView
                    android:id="@+id/timeClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />
                <!--            Emplcaement Clock-->

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/startBtn" />


        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/bodyTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTimer">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/playerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/player_1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/normal_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/playerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/player_2"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/normal_text" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLessPlayerOne"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/less"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/scorePlayerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:textColor="@android:color/black"
                    android:text="0"
                    android:textSize="@dimen/normal_text" />


                <Button
                    android:id="@+id/btnPlusPlayerOne"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/plus"
                    android:textColor="@color/black" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLessPlayerTwo"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/less"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/scorePlayerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:textColor="@android:color/black"
                    android:text="0"
                    android:textSize="@dimen/normal_text" />


                <Button
                    android:id="@+id/btnPlusPlayerTwo"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/plus"
                    android:textColor="@color/black" />


            </LinearLayout>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>